--- a/pom.xml
+++ b/pom.xml
@@ -20,5 +20,11 @@
 		<java.version>1.8</java.version>
 	</properties>
 	<build>
-	<finalName>Demo</finalName></build>
+    <plugins>
+        <plugin>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-maven-plugin</artifactId>
+        </plugin>
+    </plugins>
+	<finalName>demo</finalName></build>
 </project>
